tests/NormalTests/paczka1/fuzzy1/42327573.err
Error in line 15: twwYyjj90C1 A109 40,7
Error in line 13: PDRb7IJ A537 1,2
Error in line 21: PDRb7IJ A998 36,5
Error in line 33: MeA6fMbpAD A537 24,4
Error in line 30: PDRb7IJ A109 78,7
Error in line 36: MeA6fMbpAD A403 22,4
